2003-08-28  Matti Aarnio  <mea@zmailer.org>

	* man/*:
	    Massive rework of man-pages; all cross-references will
	    be using suffix names like:  (8zm).  Man-sections got
	    "zm" tagged to them to ease the placement into various
	    systems, like with 'inn' that has 'sm.8' ...

	* smtpserver/contentpolicy.c, smtpserver/smtpdata.c:
	    - Typo in debug texts of contentpolicy filter harness.
	    - Small default-text code rearrangements in smtpdata.c

	* man/man-to-html.sh:
	    Apparently we can be without 'groff -c' option, and still not
	    get colour output to produced HTML..   Oh yes, that was when
	    using '-Thtml' output driver.  Present HTML generation uses
	    '-Tascii' and magic state processor to convert produced (with 
	    occasional escapes) text file into fixed width courier font HTML.

2003-08-26  Matti Aarnio  <mea@zmailer.org>

	* proto/smtpserver.conf, smtpserver/smtpcmds.c:
	    In prototype smtpserver.conf: comment away 'localhost'
	    case with 'f' and 't' flags.  People do get surprises
	    when using those, and skipping some notes in INSTALL.
	    ALSO: Made 'enable_router' to semi-silently to control
	    even looking into router controlling flags.  If router
	    is not enabled, it is not complained about.

	* SiteConfig.in,  include/ta.h, transports/libta/ctlopen.c,
	  transports/libta/lockaddr.c, transports/mailbox/mailbox.c,
	  transports/sm/sm.c, transports/smtp/smtp.h,
	  transports/smtp/smtp.c, transports/smtp/appendlet.c:
	    Changed compile time configured  TA_USE_MMAP  feature
	    to runtime configured  ZENV variable  TA_USE_MMAP,
	    whose existence uses the thing, and nonexistence
	    does read message into limited size internal buffer...
	    ACTUALLY TESTED CODES ARE: 'mailbox' AND 'smtp'.
	    THE 'sm' IS NOT TESTED AT THIS POINT!

2003-08-25  Matti Aarnio  <mea@zmailer.org>

	* utils/makedb/makedb.c, utils/policy-builder.sh.in:
	    Code crashed in case the input wasn't like it was wanted..
	    Oops.
